--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.9.0",
+    "react-mouse-particles": "^1.1.5",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
